Terminación de secciones
Finalizacion de secciones y creación de diseño de css

--- a/proyectoparcial1.html
+++ b/proyectoparcial1.html
@@ -7,56 +7,78 @@
 <body>
     <header>
         <ul>
-            <li><a href="#Contacto">Contacto</a></li>
-            <li><a href="#Temas_de_interes">Temas de interes</a></li>
-            <li><a href="#Hobbies">Hobbies</a></li>
-            <li><a href="#Cursos">Cursos</a></li>
-            <li><a href="#Estudios">Estudios</a></li>
+            <li><a href=".Contacto">Contacto</a></li>
+            <li><a href=".Temas_de_interes">Temas de interes</a></li>
+            <li><a href=".Hobbies">Hobbies</a></li>
+            <li><a href=".Cursos">Cursos</a></li>
+            <li><a href=".Estudios">Estudios</a></li>
         </ul>
         <h1>Francisco Javier Mancilla Figueroa</h1>
     </header>
-    <div clase="Estudios">
+    <div class="Contenedor">
+    <div class="Estudios">
         <section class="Estudios">
             <article>
                 <h2>Estudios</h2>
-                <p>Empece a estudiar a la edad de 2 años y 10 meses en el kinder "nombre de kinder" despues a la edad de 
+                <p>Empece a estudiar a la edad de 2 años y 10 meses en el kinder Francisaco  despues a la edad de 
                 5 años empece a estudiar la primaria en la primaria Doctor Miguel Galindo despues a la edad de 11 años empece
                 a cursar la secudaria en la Escuela Secundaria Tecnica No. 12 benemerito de las americas poseriormente ingrese
                 al bachillerato en el Bachillerato Tecnico No.11 a la edad de 14 años en tercer semestre de bachillerato cambie
                 bachilllerato por cuestiones de interes al Bachillerato Tecnico No.2 y actualmente estoy cuersando 4to. semestre
-                de la carrera de Ingenieria en Software en la Facultad de Telematica a la edad de 19 años</p>
+                de la carrera de Ingenieria en Software en la Facultad de Telematica a la edad de 19 años.</p>
             </article>
         </section>
     </div>
-    <div clase="Estudios">
+    <div class="Estudios">
         <section class="Cursos">
             <article>
                 <h2>Cursos</h2>
+                <p>Tome un diplomado de ingles desde el nivel 3 hasta culminar con el nivel 8 en la Universidad de Colima, posteriormente
+                tome un cursos de primeros auxilios impartido por la Comision Nacional de Emergencias en el cual estoy certificado por la UNICEF para poder brindar 
+                una ayuda en el instante que ocurra una emergencia, a su realize un curso de lectura en el instituto de Tecnicas  de Lectura y Comprensión 
+                en el cual alcance el limite de lectura de 2000 palabras por minuto y actualmente estoy tomando un diplomado sobre el idioma aleman en el cual estoy 
+                cursando el cuarto nivel.</p>
             </article>
         </section>
     </div>
-    <div clase="Estudios">
+    <div class="Estudios">
         <section class="Hobbies">
             <article>
                 <h2>Hobbies</h2>
+                <p>Como hobies desde la edad de 7 años me han llamado la atencion el jugar videojuegos y desde ese entonces juego videojuegos cada que puedo y tengo tiempo
+                actualmente juego mas que nada un juego llamado League of Legends desde hace 3 años tambien juego shoters como lon puede llegar a ser Halo entre otros juegos,
+                al mismo tiempo que empece a jugar videojuegos, tambien empece a ir cada saber a un grupo scout al cual aun asisto cada sabado arealizar actividades de desfogue y tambien 
+                a realizar escurciones y campamentos cada cierto tiempo pero lo mas importante tratr de dejar un mundo mejor de como lo encontramos ya sea haciendo labores de apoyo social
+                o realizando actividades para ayudar a tener un mejor ecosistema y que el mundo en el cual vivimos se mantenga de una mejor manera.
+                </p>
             </article>
         </section>
     </div>
-    <div clase="Estudios">
+    <div class="Estudios">
         <section class="Temas_de_interes">
             <article>
                 <h2>Temas de interes</h2>
+                <p>En cuanto a temas de interes me llama la antencion todo tema que tenga que con los lenguajes de programacion emergentes o lenguajes y librerias que aun no conosco como
+                lo es phyton, ruby, react, rails, entre otros ya que para mi son temas en los que me gustaria sumergirme mas y conocer mas sobre dichos lenguajes y librerias.</p>
             </article>
         </section>
     </div>
-    <div clase="Estudios">
-        <section class="Contacto">
-            <article>
-                
-            </article>
-        </section>
+</div>
         <aside></aside>
     </div>
-    <footer></footer>
+    <footer>
+        <div class="Estudios">
+        <section class="Contacto">
+            <article>
+                <h2>Contacto</h2>
+                <p>Comentarios</p>
+                <input type="text">
+                <p>Telefono</p>
+                <input type="tel">
+                <p>Correo</p>
+                <input type="email">
+                <button>Enviar</button>
+            </article>
+        </section></footer>
 </body>
 </html>
