Creacion de estructura basica de CSS y correcion de HTML

--- a/proyectoparcial1.html
+++ b/proyectoparcial1.html
@@ -3,6 +3,7 @@
 <head>
     <title>Curriculum</title>
     <link rel="stylesheet" href="proyectoparcial1.css">
+    <link rel="stylesheet" href="normalize.css">
 </head>
 <body>
     <header>
@@ -15,12 +16,13 @@
         </ul>
         <h1>Francisco Javier Mancilla Figueroa</h1>
     </header>
+
     <div class="Contenedor">
     <div class="Estudios">
-        <section class="Estudios">
+        <section class="EstudiosS">
             <article>
                 <h2>Estudios</h2>
-                <p>Empece a estudiar a la edad de 2 años y 10 meses en el kinder Francisaco  despues a la edad de 
+                <p>Empece a estudiar a la edad de 2 años y 10 meses en el kinder Francisaco Henandez Espinoza despues a la edad de 
                 5 años empece a estudiar la primaria en la primaria Doctor Miguel Galindo despues a la edad de 11 años empece
                 a cursar la secudaria en la Escuela Secundaria Tecnica No. 12 benemerito de las americas poseriormente ingrese
                 al bachillerato en el Bachillerato Tecnico No.11 a la edad de 14 años en tercer semestre de bachillerato cambie
@@ -29,8 +31,9 @@
             </article>
         </section>
     </div>
-    <div class="Estudios">
-        <section class="Cursos">
+
+    <div class="Cursos">
+        <section class="CursosS">
             <article>
                 <h2>Cursos</h2>
                 <p>Tome un diplomado de ingles desde el nivel 3 hasta culminar con el nivel 8 en la Universidad de Colima, posteriormente
@@ -41,8 +44,9 @@
             </article>
         </section>
     </div>
-    <div class="Estudios">
-        <section class="Hobbies">
+
+    <div class="Hobbies">
+        <section class="HobbiesS">
             <article>
                 <h2>Hobbies</h2>
                 <p>Como hobies desde la edad de 7 años me han llamado la atencion el jugar videojuegos y desde ese entonces juego videojuegos cada que puedo y tengo tiempo
@@ -54,8 +58,9 @@
             </article>
         </section>
     </div>
-    <div class="Estudios">
-        <section class="Temas_de_interes">
+
+    <div class="Temas_de_inters">
+        <section class="Temas_de_interesS">
             <article>
                 <h2>Temas de interes</h2>
                 <p>En cuanto a temas de interes me llama la antencion todo tema que tenga que con los lenguajes de programacion emergentes o lenguajes y librerias que aun no conosco como
@@ -63,12 +68,13 @@
             </article>
         </section>
     </div>
-</div>
+
         <aside></aside>
     </div>
+    </div>
     <footer>
-        <div class="Estudios">
-        <section class="Contacto">
+        <div class="Contacto">
+        <section class="ContactoS">
             <article>
                 <h2>Contacto</h2>
                 <p>Comentarios</p>
@@ -79,6 +85,7 @@
                 <input type="email">
                 <button>Enviar</button>
             </article>
-        </section></footer>
+        </section>
+    </footer>
 </body>
 </html>
