Finalizacion de web personal
Se añade imagen de fondo , normalize , finalizacion de html y finalizacion de creacion de archivo css

--- a/proyectoparcial1.html
+++ b/proyectoparcial1.html
@@ -14,10 +14,17 @@
             <li><a href=".Cursos">Cursos</a></li>
             <li><a href=".Estudios">Estudios</a></li>
         </ul>
-        <h1>Francisco Javier Mancilla Figueroa</h1>
     </header>
 
     <div class="Contenedor">
+        <div class="ExtraInfo">
+                <section class="ExtraInfoS">
+                        <article>
+                            <h2>Informacion Personal</h2>
+                            <p>Mi nombre es Francisco Javier Mancilla Figueroa, nací el 31 de Octubre de 1999, soy originario del municipo de Minatitlan Colima.</p>
+                        </article>
+                    </section>
+        </div>
     <div class="Estudios">
         <section class="EstudiosS">
             <article>
@@ -68,10 +75,22 @@
             </article>
         </section>
     </div>
-
-        <aside></aside>
+    <div class="Aside">
+        <aside>
+        <h3>Secciones:</h3>
+        <a href=".Contacto">Contacto</a> 
+        <br>
+        <a href=".Temas_de_interes">Temas de interes</a>
+        <br>
+        <a href=".Hobbies">Hobbies</a>
+        <br>
+        <a href=".Cursos">Cursos</a>
+        <br>
+        <a href=".Estudios">Estudios</a>
+        </aside>
     </div>
     </div>
+</div>
     <footer>
         <div class="Contacto">
         <section class="ContactoS">
@@ -83,7 +102,8 @@
                 <input type="tel">
                 <p>Correo</p>
                 <input type="email">
-                <button>Enviar</button>
+                <br>
+                <input type="button" value="Enviar" >
             </article>
         </section>
     </footer>
